<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_app">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/note_book"
            android:textColor="@android:color/white"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/email_login"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_login"
            style="@style/TextInputLayout_Sign_Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email_address"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance_Sign_up"
            app:layout_constraintBottom_toTopOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/text">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/HintAppearance_Sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:paddingEnd="13dp"
                app:hintTextAppearance="@style/HintAppearance_Sign_up" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login"
            style="@style/TextInputLayout_Sign_Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance_Sign_up"
            app:layout_constraintTop_toBottomOf="@+id/email_login"
            app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#fff">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/HintAppearance_Sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Forgot Password ?"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#80FFFFFF"
            android:fontFamily="serif"
            android:text="Log in"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linear"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="OR"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_sign_up"
            android:fontFamily="serif"
            android:text="Sign Up"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress"
            style="@style/SpinKitView.Circle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

<!--        <com.victor.loading.rotate.RotateLoading-->
<!--            android:id="@+id/rotateloading"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:loading_color="@color/colorAccent" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>